# llmbench

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  llmbench.py  llmbench_gui.py  paper.md  pyproject.toml
src/llmbench/: __init__.py  __main__.py  _sample_tasks.py  cli.py  gui.py  metrics.py  models.py  runner.py  spec.py  tasks.py
tasks/: coding_basic.json  qa_simple.json
tests/: test_llmbench.py
