[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llmbench"
version = "0.2.0"
description = "Reproducible LLM benchmarking framework with latency, quality, and cost tracking"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Vaibhav Deshmukh", email = "vdeshmukh203@gmail.com"}]
requires-python = ">=3.8"
keywords = ["llm", "benchmark", "evaluation", "rouge", "latency", "cost", "reproducibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
yaml = ["pyyaml>=5.0"]

[project.scripts]
llmbench     = "llmbench:main"
llmbench-gui = "llmbench_gui:run_gui"

[tool.setuptools]
py-modules = ["llmbench", "llmbench_gui"]
